--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://robertschultz.github.io
 title: Robert Schultz
-subtitle: Technology Evangelist at Ancestry.com . Building awesome stuff. Trying to make the world a better place.
+subtitle: Technology Evangelist at Ancestry.com. Building awesome stuff. Trying to make the world a better place.
 author: Robert Schultz
 simple_search: https://www.google.com/search
 description: This is a description.
@@ -27,7 +27,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 source: source
 destination: public
 plugins: plugins
@@ -35,17 +35,17 @@ code_dir: downloads/code
 category_dir: blog/categories
 markdown: kramdown
 kramdown:
-  use_coderay: true
+  use_coderay: false
   coderay:
     coderay_line_numbers: nil
     coderay_css: class
-#rdiscount:
-#  extensions:
-#    - autolink
-#    - footnotes
-#    - smart
-highlighter: null # default python pygments have been replaced by pygments.rb
-#highlighter: pygments # default python pygments have been replaced by pygments.rb
+rdiscount:
+  extensions:
+    - autolink
+    - footnotes
+    - smart
+#highlighter: null # default python pygments have been replaced by pygments.rb
+highlighter: pygments # default python pygments have been replaced by pygments.rb
 paginate: 10          # Posts per page on the blog index
 paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
@@ -100,7 +100,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-9586375-1
 
 # Facebook Like
 facebook_like: false
