--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://robertschultz.github.io
 title: Robert Schultz
-subtitle: Technology Evangelist at Ancestry.com. Building awesome stuff. Trying to make the world a better place.
+subtitle: Technology Evangelist
 author: Robert Schultz
 simple_search: https://www.google.com/search
 description: This is a description.
